.. -*- coding: utf-8 -*-

==================
 Docutils History
==================

:Author: David Goodger; open to all Docutils developers
:Contact: docutils-develop@lists.sourceforge.net
:Date: $Date$
:Revision: $Revision$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.

.. contents::

Changes Since 0.12
==================

* docutils/nodes.py

  - Fix [ 253 ] Attribute key without value not allowed in XML.

* docutils/parsers/rst/__init__.py

  - Fix [ 233 ] Change the base URL for the :rfc: role.

* docutils/parsers/rst/directives/tables.py

  - Patch [ 120 ] tables accept option widths: list of relative widths, 'auto'
    or 'grid'.

* docutils/utils/math/math2html.py

  - Add ``\colon`` macro, fix spacing around colons. Fixes [ 246 ].
  - New upstream version (additional macros, piecewise integrals and sums).

* docutils/writers/html_base/

  - New HTML writer generating basic HTML (`polyglot markup`_ conforming to
    both, `HTML 5`_ and `XHTML 1.0`_ (transitional)).

    New stylesheet ``html-base.css`` for default layout using CSS 2.1 rules.

    Also base for the `xhtml11` writer.

* docutils/writers/html4css1/__init__.py

  - Add "docutils" to class values for "container" object to address [ 267 ].
  - Apply patch [ 119 ] by Anatoly Techtonik: use absolute paths for
    ``default_stylesheet_path`` and ``default_template_path``.
  - Fix [ 266 ] creating labels/class values in description list items.

* docutils/writers/xhtml11/

  - New HTML writer generating `XHTML 1.1`_ styled with CSS2.1
    Moved to the docutils core from sandbox/html4strict.

* docutils/writers/latex2e/__init__.py

  - use absolute path for ``default_template_path``.

* docutils/writers/odf_odt/__init__.py

  - remove decode.encode of filename stored in zip.

* docutils/writers/latex2e/__init__.py

  - Fix [ 262 ] Use ``\linewidth`` instead of ``\textwidth`` for figures,
    admonitions and docinfo.

* tools/
